--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -1,73 +1,394 @@
 body{
-    font-family: sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: #014E56;
+}
+nav{
+  display: flex;
+  margin-left: 926px;
+  word-spacing: 70px;
+}
+li{
+  display: inline;
+  color: white;
+  width: 49px;
+}
+li:nth-child(3){
+  border: 3px solid white;
+  padding: 10px 35px;
+  border-radius: 30px
+}
+h1{
+  color:white;
+  font-size: 40px;
+  margin-left:120px;
+  margin-top: -50px;
+
+}
+section h1{
+  font-size: 65px;
+  margin-top: 150px;
+}
+section h3{
+  width: 730px;
+  margin-left: 520px;
+  color: white;
+  margin-top: -100px;
+}
+.grid-container{
+  display: grid;
+  grid-template-columns: auto auto auto;
+  justify-content: space-evenly;
+}
+.grid-item1{
+  background-color: #012F34;
+  width: 350px;
+  height: 275px;
+  img{
+    border: 1px solid none;
+    border-radius: 50%;
+    margin-left: 125px;
+    margin-top: 50px;
   }
+
+}
+.grid-item2{
+  background-color: #012F34;
+  width: 350px;
+  height: 275px;
+  img{
+    border: 1px solid none;
+    border-radius: 50%;
+    margin-left: 125px;
+    margin-top: 50px;
+  }
+
+}
+.grid-item3{
+  background-color: #012F34;
+  width: 350px;
+  height: 275px;
+  img{
+    border: 1px solid none;
+    border-radius: 50%;
+    margin-left: 125px;
+    margin-top: 50px;
+  }
+
+}
+article h1{
+  margin-left: 570px;
+  margin-bottom: 60px
+}
+article{
+  margin-top: 300px;
+  background-color: #004047;
+  padding-top: 100px;
+  padding-bottom: 250px;
+}
+article h3,h4{
+  color: white;
+  margin-left: 120px;
+  color: lightblue;
+}
+button{
+  background-color: #F67E7E;
+  width:56px;
+  height: 56px;
+  border-radius: 50%;
+  border: none;
+  font-size: 30px;
+  color: #012F34;
+  margin-left: 140px;
+  margin-top: -10px
+
+}
+ul li:hover:nth-child(3){
+  background-color: white;
+  color: #012F34;
+  cursor: pointer;
+}
+footer{
+  border: 1px solid none;
+  margin-top: 0px;
+  background-color: #012F34;
+  padding-top: 50px;
+}
+footer h1{
+  margin-top: 100px;
+  margin-left: 530px;
+  font-size: 50px;
+}
+footer img{
+  margin-left: 120px;
+}
+.footer-h1{
+  margin-left: -500px;
+  border: 1px solid white;
+  padding-left: 820px;
+  padding-bottom: 100px;
+  padding-top: 100px;
+  background-color: #F67E7E;
+  color:#012F34;
+  button{
+  border: 3px solid #012F34;
+  width: 300px;
+  display: inline;
+  border-radius: 30px;
+  font-size: 20px;
+  }
+}
+.footer-h1 button:hover{
+  background-color:#012F34;
+  color: white;
+  cursor: pointer;
+  border: none
+}
+.myteam{
+  margin-left:100px;
+  color: white;
+  font-size: 35px;
+  margin-top: 20px;
+  padding-bottom: 20px;
+}
+.icons{
+  display: inline;
+  margin-left: 10px;
+  
+}
+.icon-container{
+  margin-left:1100px;
+  margin-top: -80px;
+  padding-bottom: 30px;
+}
+@media (max-width:968px) {
   nav{
-    background-color: black;
-  }
-  nav ul li {
     display: flex;
-    flex-direction: column;
-    padding: 0 10px;
-    list-style-type: none;
-    text-decoration: none;
-    color: #fff;
+    margin-left: 450px;
+    word-spacing: 40px;
   }
-  ul li a {
+  section h1{
+    font-size: 65px;
+    margin-top: 150px;
+    margin-left: 350px;
+  }
+  section h3{
+    width: 530px;
+    margin-left: 190px;
     color: white;
-    text-decoration: none;
+    margin-top: 50px;
+    text-align: center;
   }
-  nav > ul{
-    padding: 20px;
-    list-style-type: none;
+  .grid-container{
+    display: grid;
+    grid-template-columns: auto auto;
+  }
+  .grid-item3{
+    background-color: #012F34;
+    width: 350px;
+    height: 275px;
+    margin-left: 250px;
+    margin-top: 70px;
+    img{
+      border: 1px solid none;
+      border-radius: 50%;
+      margin-left: 125px;
+      margin-top: 50px;
+    }
+  
+  }
+  article h1{
+    margin-left: 320px;
+    margin-bottom: 60px
+  }
+  .grid-item1{
+    background-color: #012F34;
+    width: 350px;
+    height: 275px;
+    margin-left: 70px;
+    img{
+      border: 1px solid none;
+      border-radius: 50%;
+      margin-left: 125px;
+      margin-top: 50px;
+    }
+  
+  }
+  .grid-item2{
+    background-color: #012F34;
+    width: 350px;
+    height: 275px;
+    margin-left: -260px;
+    img{
+      border: 1px solid none;
+      border-radius: 50%;
+      margin-left: 125px;
+      margin-top: 50px;
+    }
+  
+  }
+  footer h1{
+    margin-top: 100px;
+    margin-left: 260px;
+    font-size: 50px;
+  }
+  footer img{
+    margin-left: 25px;
+  }
+  .footer-h1{
+    margin-left: -700px;
+    border: 1px solid white;
+    padding-left: 820px;
+    padding-bottom: 100px;
+    padding-top: 100px;
+    background-color: #F67E7E;
+    color:#012F34;
+    button{
+      margin-left: 100px;
+    border: 3px solid #012F34;
+    width: 150px;
+    display: inline;
+    border-radius: 30px;
+    font-size: 20px;
+    }
+  }
+  .icon-container{
+    margin-left:700px;
+    margin-top: -80px;
+    padding-bottom: 30px;
+  }
+}
+@media (max-width:375px) {
+  nav{
     display: flex;
-    justify-content: flex-start
+    margin-left: 400px;
+    word-spacing: 40px;
+  }
+  li{
+    display: none
   }
   h1{
-    color: white;
-    display:inline;
-    background-color: lightblue;
-    padding-top: 20px;
-    margin-left: 0px;
-    padding-right: 636px;
-    padding-left: 300px;
-    border: 1px solid;
-    padding-bottom: 100px;
-    text-align: center
-  }
-  h4{
-    text-align: center;
-    color: white
-  }
-  h2{margin-top: 120px;
-    text-align: center
-  }
-  h5{
-    text-align: center
-  }
-  .flex-container {
-    display: flex;
-    margin-left: 0px;
-    
-  }
+    color:white;
+    font-size: 60px;
+    margin-left: 100px;
+    margin-top: 0px;
   
-  .item1:hover {
-    margin: 0px;
-    transform: scale(1.1);
-    transition: 0.5s;
-    
   }
-  .item2:hover {
-    margin: 0px;
-    transform: scale(1.1);
-    transition: 0.5s;
-    
+  section h1{
+    font-size: 65px;
+    margin-top: 150px;
+    margin-left: 270px;
   }
-  .item3:hover {
-    margin: 0px;
-    transform: scale(1.1);
-    transition: 0.5s;
-    
+  section h3{
+    width: 430px;
+    margin-left: 150px;
+    color: white;
+    margin-top: 50px;
+    text-align: center;
   }
-  img{
-    border-radius: 10%;
+  .grid-container{
+    display: grid;
+    grid-template-columns: 1fr;
   }
+  .grid-item3{
+    background-color: #012F34;
+    width: 350px;
+    height: 275px;
+    margin-left: 200px;
+    margin-top: 70px;
+    img{
+      border: 1px solid none;
+      border-radius: 50%;
+      margin-left: 125px;
+      margin-top: 50px;
+    }
+  
+  }
+  article h1{
+    width: 600px;
+    margin-left: 120px;
+    margin-bottom: 60px
+  }
+  .grid-item1{
+    background-color: #012F34;
+    width: 350px;
+    height: 275px;
+    margin-left: 200px;
+    img{
+      border: 1px solid none;
+      border-radius: 50%;
+      margin-left: 125px;
+      margin-top: 50px;
+    }
+  
+  }
+  .grid-item2{
+    background-color: #012F34;
+    width: 350px;
+    height: 275px;
+    margin-left: 200px;
+    margin-top: 50px;
+    img{
+      border: 1px solid none;
+      border-radius: 50%;
+      margin-left: 125px;
+      margin-top: 50px;
+    }
+  
+  }
+  article{
+    margin-top: 300px;
+    background-color: #004047;
+    padding-top: 100px;
+    padding-bottom: 250px;
+    margin-right: -400px;
+    margin-left: -10px;
+  }
+  footer{
+    border: 1px solid;
+    margin-right: -400px;
+  }
+  footer h1{
+    width: 600px;
+    margin-top: 100px;
+    margin-left: 160px;
+    font-size: 50px;
+  }
+  footer img{
+    margin-left: 325px;
+    margin-top: 60px;
+  }
+  .footer-h1{
+    margin-left: -770px;
+    text-align: center;
+    border: 1px solid white;
+    padding-left: 800px;
+    padding-bottom: 150px;
+    padding-top: 100px;
+    padding-right: 130px;
+    background-color: #F67E7E;
+    color:#012F34;
+    button{
+      margin-left: 100px;
+      text-align: center;
+    border: 3px solid #012F34;
+    width: 150px;
+    display: inline;
+    border-radius: 30px;
+    font-size: 20px;
+    }
+  }
+  .icon-container{
+    margin-left:400px;
+    margin-top: -10px;
+    padding-bottom: 30px;
+    margin-right: 160px;
+  }
+  .myteam{
+    display: inline;
+    margin-left:300px;
+    color: white;
+    font-size: 35px;
+    margin-top: 20px;
+    padding-bottom: 20px;
+  }
+}
